<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/number_pad_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        app:alignmentMode="alignBounds"
        app:columnCount="3"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <!-- Row 1 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_1"
            style="@style/NumberPadButton"
            android:text="@string/number_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_2"
            style="@style/NumberPadButton"
            android:text="@string/number_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_3"
            style="@style/NumberPadButton"
            android:text="@string/number_3" />

        <!-- Row 2 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_4"
            style="@style/NumberPadButton"
            android:text="@string/number_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_5"
            style="@style/NumberPadButton"
            android:text="@string/number_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_6"
            style="@style/NumberPadButton"

            android:text="@string/number_6" />

        <!-- Row 3 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_7"
            style="@style/NumberPadButton"
            android:text="@string/number_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_8"
            style="@style/NumberPadButton"
            android:text="@string/number_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_9"
            style="@style/NumberPadButton"
            android:text="@string/number_9" />

        <!-- Row 4 -->
        <View
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_0"
            style="@style/NumberPadButton"

            android:text="@string/number_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_backspace"
            style="@style/NumberPadButton"

            android:text="@string/backspace" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
